# nestopia

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYRIGHT  ChangeLog  Makefile  Makefile.am  NstDatabase.xml  README  README.Linux  README.md  README.unix  appveyor.yml  changelog.linux  changelog.txt  configure.ac  nstcontrols  package.json  readme.html  schemadb.xsd  schemaromset.xsd
doc/: index-all.html  index-allclasses-frame.html  index-deprecated-list.html  index-overview-frame.html  index-overview-summary.html  index-overview-tree.html  index.html
doc/details/api/: Nes..Api..BarcodeReader.html  Nes..Api..Cartridge..ChooseProfileCallback.html  Nes..Api..Cartridge..ChooseProfileCaller.html  Nes..Api..Cartridge..Database..Entry.html  Nes..Api..Cartridge..Database.html  Nes..Api..Cartridge..NesHeader..Mirroring.html  Nes..Api..Cartridge..NesHeader..Ppu.html  Nes..Api..Cartridge..NesHeader..Region.html  Nes..Api..Cartridge..NesHeader..System.html  Nes..Api..Cartridge..NesHeader.html  Nes..Api..Cartridge..Profile..Board..Chip.html  Nes..Api..Cartridge..Profile..Board..Chips.html  Nes..Api..Cartridge..Profile..Board..Chr.html  Nes..Api..Cartridge..Profile..Board..Pin.html  Nes..Api..Cartridge..Profile..Board..Pins.html  Nes..Api..Cartridge..Profile..Board..Prg.html  Nes..Api..Cartridge..Profile..Board..Ram.html  Nes..Api..Cartridge..Profile..Board..Rams.html  Nes..Api..Cartridge..Profile..Board..Rom.html  Nes..Api..Cartridge..Profile..Board..Roms.html  Nes..Api..Cartridge..Profile..Board..Sample.html  Nes..Api..Cartridge..Profile..Board..Samples.html  (+171 more)
extras/: NES Classic (FBX-FS).pal  NES_Classic-FBX.pal  Original Hardware (FBX).pal  PVM Style (FBX).pal  Unsaturated-Final.pal  hybrid.pal  nescap.pal
icons/: nestopia.desktop
libretro/: Makefile  Makefile.common  control  libretro.cpp  libretro_core_options.h  libretro_core_options_intl.h
libretro/jni/: Android.mk
libretro/msvc/: msvc-2003-xbox1.sln  msvc-2010-360.sln  msvc-2010.sln
palettes/: CXA2025AS-1536.pal  Nobilitea.pal  Nostalgia-FBX.pal  Royaltea.pal  Unsaturated-V5.pal  YUV-V3.pal  ntsc.pal
projects/: core.vcproj  core.vcxproj  core.vcxproj.filters  language.vcproj  language.vcxproj  nestopia.sln  win32.vcproj  win32.vcxproj  win32.vcxproj.filters
projects/blackberry-qnx/: .cproject  .project
shaders/: crtea.fs  default.fs  default.vs  mmpx.fs  omniscale.fs  sharp-bilinear.fs
source/7zip/: IArchive.h  IProgress.h  IStream.h  readme.txt
source/common/: audio.cpp  cheats.cpp  cli.cpp  config.cpp  config.h  homebrew.h  input.cpp  input.h  nstcommon.cpp  nstcommon.h  samples.cpp  samples.h  sdlinput.cpp  video.cpp  video.h
source/core/: NstApu.cpp  NstApu.hpp  NstBase.hpp  NstCartridge.cpp  NstCartridge.hpp  NstCartridgeInes.cpp  NstCartridgeInes.hpp  NstCartridgeRomset.cpp  NstCartridgeUnif.cpp  NstCore.cpp  NstCore.hpp  NstCpu.cpp  NstCpu.hpp  NstDipSwitches.hpp  NstFds.cpp  NstFds.hpp  NstFile.cpp  NstHomebrew.cpp  NstHomebrew.hpp  NstHook.hpp  NstImageDatabase.cpp  NstIoLine.hpp  NstLog.cpp  NstLog.hpp  NstMachine.cpp  NstMachine.hpp  NstMemory.hpp  NstNsf.cpp  NstNsf.hpp  NstPatcherIps.cpp  NstPins.cpp  NstPpu.cpp  NstPpu.hpp  NstRam.cpp  NstSha1.hpp  NstSoundPcm.cpp  NstSoundPcm.hpp  NstSoundPlayer.cpp  NstSoundRenderer.cpp  NstSoundRenderer.hpp  (+15 more)
source/fltkui/: afilt.h  audio.cpp  audio.h  audiomanager.cpp  audiomanager.h  cheats.cpp  cheats.h  chtmanager.cpp  chtmanager.h  cli.cpp  config.cpp  config.h  crc32.cpp  crc32.h  fltkui.cpp  fltkui.h  fltkui_archive.cpp  fltkui_archive.h  fltkui_cheats.cpp  fltkui_cheats.h  fltkui_config.cpp  fltkui_config.h  fltkui_settings.cpp  fltkui_settings.h  hasher.cpp  hasher.h  homebrew.cpp  ini.cpp  ini.h  input.cpp  input.h  inputmanager.cpp  inputmanager.h  jg.cpp  jgmanager.cpp  jgmanager.h  logdriver.cpp  logdriver.h  nesfont.h  nstcommon.cpp  (+12 more)
source/gtkui/: gtkui.cpp  gtkui.h  gtkui_archive.cpp  gtkui_archive.h  gtkui_callbacks.cpp  gtkui_callbacks.h  gtkui_cheats.cpp  gtkui_cheats.h  gtkui_config.cpp  gtkui_config.h  gtkui_dialogs.cpp  gtkui_dialogs.h  gtkui_input.cpp  gtkui_input.h
source/kaillera/: kailleraclient.h  sdk-readme.txt
source/linux/: auxio.cpp  auxio.h  callbacks.c  callbacks.h  cheats.cpp  controlconfig.cpp  controlconfig.h  input.cpp  input.h  interface.c  interface.h  kentry.h  main.cpp  main.h  nsticon.c  oss.cpp  oss.h  seffect.cpp  seffect.h  settings.cpp  settings.h  support.c  uihelp.cpp  uihelp.h
source/nes_ntsc/: benchmark.c  demo.c  demo_impl.h
source/sdl/: audio.cpp  audio.h  cursor.cpp  input.cpp  input.h  main.cpp  main.h  sdlinput.cpp  sdlinput.h  sdlmain.cpp  sdlvideo.cpp  sdlvideo.h
source/unix/: audio.cpp  audio.h  auxio.cpp  callbacks.c  callbacks.h  cheats.cpp  cheats.h  cli.cpp  cli.h  config.cpp  config.h  controlconfig.cpp  cursor.cpp  cursor.h  fileio.cpp  fileio.h  font.h  fonts.inc  gtkui.cpp  gtkui.h  input.cpp  input.h  interface.c  interface.h  kentry.cpp  main.cpp  main.h  newaudio.cpp  newaudio.h  oss.cpp  oss.h  png.cpp  seffect.cpp  seffect.h  settings.cpp  settings.h  timing.cpp  timing.h  uihelp.cpp  video.cpp  (+1 more)
source/unrar/: unrar.h  unrardll.txt
source/win32/: NstApplicationConfiguration.cpp  NstApplicationConfiguration.hpp  NstApplicationException.cpp  NstApplicationException.hpp  NstApplicationInstance.cpp  NstApplicationInstance.hpp  NstApplicationLanguage.cpp  NstApplicationLanguage.hpp  NstApplicationMain.cpp  NstApplicationMain.hpp  NstCollectionBitSet.hpp  NstCollectionRouter.hpp  NstCollectionRouter.inl  NstCollectionVector.cpp  NstCollectionVector.hpp  NstCtrlCheckBox.cpp  NstCtrlCheckBox.hpp  NstCtrlComboBox.cpp  NstCtrlComboBox.hpp  NstCtrlEdit.cpp  NstCtrlEdit.hpp  NstCtrlListBox.cpp  NstCtrlListBox.hpp  NstCtrlListView.cpp  NstCtrlListView.hpp  NstCtrlRadioButton.hpp  NstCtrlSlider.cpp  NstCtrlSlider.hpp  NstCtrlStandard.cpp  NstCtrlStandard.hpp  NstCtrlTreeView.cpp  NstCtrlTreeView.hpp  NstDialogAbout.cpp  NstDialogAbout.hpp  NstDialogAutoSaver.cpp  NstDialogAutoSaver.hpp  NstDialogBarcodeReader.cpp  NstDialogBarcodeReader.hpp  NstDialogBrowse.cpp  NstDialogBrowse.hpp  (+207 more)
(+240 files in other folders)
